=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

 - fix: Unavailable dependency `angular-truncate` module caused blank Admin UI.
   Switched to `angular-truncate-2` now.

 - Display current shard recovery status on table info page. It shows the
   percentage of done recovery.

 - Updated calculation of underreplicated shards/records to work with the
   change in Crate server where shards in sys.shards table have a more fine
   granular state now and relocating shards are listed, too.

2015/11/27 0.16.1
=================

 - fix: column headers where not shown in result table on console page
   when two or more columns with the same name were selected

2015/11/16 0.16.0
=================

 - The table list is now fully searchable and sorted by table name within
   its schemas.

 - fix: charts are not correctly displayed in Microsoft Edge browser.

 - UDC: identify anonymous user with cluster id.
   Both user id and cluster id are anonymous traits.
   Note: You can disable UDC via the `udc.enabled` setting on the Crate server.

2015/10/30 0.15.3
=================

 - fix: REPLICATED DATA at the overview page showed incorrect percentage of
   of replicated data when number of undereplicated records was higher than
   number of total records

2015/10/20 0.15.2
=================

 - fixed a bug that displays partitions that are not related to the selected
   table in the table-list.

 - fixed a bug where cluster shows wrong state if the number of nodes gets
   smaller than the minimum master nodes.

2015/10/09 0.15.1
=================

 - fixed a visual bug that let an item in the node/table list partly disappear
   if scrolling gets enabled

 - fixed URL to download in dropdown that notifies about old Crate version

 - fixed a bug that displays a zero value as NULL value

2015/09/17 0.15.0
=================

 - display cluster checks on overview page
